--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   logger: ^2.0.2+1
   provider: ^6.1.1
+  flutter_spinkit: ^5.2.0
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
 
