--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,9 @@ dependencies:
   logger: ^2.0.2+1
   provider: ^6.1.1
   flutter_spinkit: ^5.2.0
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
+  firebase_core: ^2.25.0
+  firebase_auth: ^4.17.0
+  cloud_firestore: ^4.15.0
 
 dev_dependencies:
   flutter_test:
